--- a/Multer-Firebase/package.json
+++ b/Multer-Firebase/package.json
@@ -2,9 +2,9 @@
   "name": "Multer-Firebase",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "Main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node Main.js"
   },
   "keywords": [],
   "author": "",
