--- a/Multer-Firebase/package.json
+++ b/Multer-Firebase/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "Main.js",
   "scripts": {
-    "start": "node Main.js"
+    "start": "node Main.js",
+    "dev": "nodemon Main.js"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,8 @@
     "firebase-admin": "^8.1.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
